--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Hesap makinesi, hesaplamalarınızda kullanabileceğiniz çok çeşitli yerleşi
 	    <div class="container-fluid">
 		<div class="row my-2 py-0 mx-0 row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 text-center justify-content-center fs-4">
                     <p class="card-text py-0 my-0"><a href="https://www.calculator.gr/"><span>Hesap Makinesi</span></a></p>
-                    <p class="card-text py-0 my-0"><a href="https://www.nanocalculator.com/"><span>Çevrimiçi Hesap Makinesi</span></a></p>
+                    <p class="card-text py-0 my-0"><a href="https://www.teracalc.com/"><span>Çevrimiçi Hesap Makinesi</span></a></p>
                     <p class="card-text py-0 my-0"><a href="https://www.arithmomixani.gr/"><span>Bilimsel Online Hesap Makinesi</span></a></p>
                     <p class="card-text py-0 my-0"><a href="https://www.kompioyteraki.gr/"><span>Matematiksel Online Hesap Makinesi</span></a></p>
                     <p class="card-text py-0 my-0"><a href="http://www.calculator.edu.gr/"><span>Gelişmiş Online Hesap Makinesi</span></a></p>
