--- a/index.html
+++ b/index.html
@@ -52,14 +52,15 @@ Bir gerçek veya karmaşık sayının doğal logaritmasını hesaplayın. Ayrıc
 Hesap makinesi, hesaplamalarınızda kullanabileceğiniz çok çeşitli yerleşik fiziksel sabitler sağlar. Her sabit için hem değer hem de birim mevcuttur. Evrensel sabitler, elektromanyetik sabitler, atomik ve nükleer sabitler, fiziko-kimyasal sabitler, kabul edilen değerler ve doğal birimler mevcuttur.</p>
 	    <div class="container-fluid">
 		<div class="row my-2 py-0 mx-0 row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 text-center justify-content-center fs-4">
-                    <p class="card-text py-0 my-0"><a href="https://www.calculator.gr/"><span>Hesap Makinesi</span></a></p>
-                    <p class="card-text py-0 my-0"><a href="https://www.teracalc.com/"><span>Çevrimiçi Hesap Makinesi</span></a></p>
-                    <p class="card-text py-0 my-0"><a href="https://www.arithmomixani.gr/"><span>Bilimsel Online Hesap Makinesi</span></a></p>
-                    <p class="card-text py-0 my-0"><a href="https://www.kompioyteraki.gr/"><span>Matematiksel Online Hesap Makinesi</span></a></p>
-                    <p class="card-text py-0 my-0"><a href="http://www.calculator.edu.gr/"><span>Gelişmiş Online Hesap Makinesi</span></a></p>
-                    <p class="card-text py-0 my-0"><a href="http://www.calculator.net.gr/"><span>Kolay Çevrimiçi Hesap Makinesi</span></a></p>
-                    <p class="card-text py-0 my-0"><a href="http://www.calculator.org.gr/"><span>Ücretsiz Online Hesap Makinesi</span></a></p>
-                    <p class="card-text py-0 my-0"><a href="http://www.calculator.com.gr/"><span>En İyi Online Hesap Makinesi</span></a></p>
+                    <p class="card-text py-0 my-0"><a href="https://www.calculator.gr/"><span>Calculator</span></a></p>
+                    <p class="card-text py-0 my-0"><a href="https://www.kompiouteraki.gr/"><span>Κομπιουτεράκι</span></a></p>
+                    <p class="card-text py-0 my-0"><a href="https://www.teracalc.com/"><span>Calculator</span></a></p>
+                    <p class="card-text py-0 my-0"><a href="https://www.arithmomixani.gr/"><span>Αριθμομηχανή</span></a></p>
+                    <p class="card-text py-0 my-0"><a href="https://www.kompioyteraki.gr/"><span>Κομπιουτεράκι</span></a></p>
+                    <p class="card-text py-0 my-0"><a href="http://www.calculator.edu.gr/"><span>Calculator</span></a></p>
+                    <p class="card-text py-0 my-0"><a href="http://www.calculator.net.gr/"><span>Online Calculator</span></a></p>
+                    <p class="card-text py-0 my-0"><a href="http://www.calculator.org.gr/"><span>Online Scientific Calculator</span></a></p>
+                    <p class="card-text py-0 my-0"><a href="http://www.calculator.com.gr/"><span>Scientific Calculator</span></a></p>
 		</div>
 	    </div>	    
 	</div>
